ingress/elastic-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefixes-elastic
spec:
  stripPrefix:
    prefixes:
    - /elastic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: data-project-stripprefixes-elastic@kubernetescrd
  name: elastic-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-elastic-cluster-es-http
            port:
              number: 9200
        path: /elastic
        pathType: Prefix
